--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     container_name: geekhackvol10_frontend
     tty: true
     volumes:
-      - .:/app
+      - ./frontend:/app/frontend
       # - geekhackvol10_node_modules:/app/frontend/node_modules
     ports:
       - 3000:3000
@@ -27,7 +27,7 @@ services:
       - 8080:8080
     tty: true
     volumes:
-      - .:/app
+      - ./backend:/app/backend
     depends_on:
       - db
 
