--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "agora-react-uikit": "^1.2.0",
     "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18"
