--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "next-sample",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "agora-react-uikit": "^1.2.0",
-    "next": "^13.5.6",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
-  }
+	"name": "next-sample",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prisma": "prisma generate"
+	},
+	"dependencies": {
+		"agora-react-uikit": "^1.2.0",
+		"@next-auth/prisma-adapter": "^1.0.7",
+		"@prisma/client": "^5.17",
+		"next": "^13.5.6",
+		"next-auth": "^4.24.7",
+		"react": "^18",
+		"react-dom": "^18"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10",
+		"eslint": "^8",
+		"eslint-config-next": "13.5.6",
+		"postcss": "^8",
+		"prisma": "^5.17",
+		"tailwindcss": "^3",
+		"typescript": "^5"
+	}
 }
