--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"prisma": "prisma generate"
+		"prisma": "prisma generate",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"agora-react-uikit": "^1.2.0",
