--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,7 +27,8 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		"app/rooms/[techname]"
+		"app/rooms/[techname]",
+		"app/rooms/rust"
 	],
 	"exclude": ["node_modules"]
 }
